--- a/NcDonalds/Areas/Admin/Views/AdminCategoria/Edit.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminCategoria/Edit.cshtml
@@ -11,7 +11,7 @@
     <div class="container-row">
 
         <section class="section-container">
-            <img class="img-action" src="/images/editar-codigo.svg" alt="mulher bebendo suquinho">
+            <img class="img-action" src="/images/Lanches/food.svg" alt="mulher bebendo suquinho">
         </section>
 
         <form asp-area="Admin" asp-controller="AdminCategoria" asp-action="Edit" method="post" class="inputs" role="form">
