--- a/NcDonalds/Areas/Admin/Views/AdminCupom/Edit.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminCupom/Edit.cshtml
@@ -13,7 +13,7 @@
     <div class="container-row">
 
         <section class="section-container">
-            <img class="img-action" src="/images/creating.svg" alt="mulher bebendo suquinho">
+            <img class="img-action" src="/images/Lanches/food.svg" alt="mulher bebendo suquinho">
         </section>
 
 
