--- a/NcDonalds/wwwroot/css/site.css
+++ b/NcDonalds/wwwroot/css/site.css
@@ -194,3 +194,33 @@ footer {
     margin-top: 30px;
 }
 
+/* Checkout */
+
+.title-checkout {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 30px 0;
+    color: #FFD700;
+    font-size: 1.7rem;
+}
+
+.cupom-body{
+    width: 600px;
+}
+
+.cupom-body label{
+    color: black;
+}
+
+.botao-validar-cupom {
+    border-radius: 10px;
+    padding: 15px;
+    border-width: 0px;
+    margin: 15px auto 0;
+}
+
+
+.form-floating{
+    width: 50%
+}
