--- a/NcDonalds/wwwroot/css/site.css
+++ b/NcDonalds/wwwroot/css/site.css
@@ -200,13 +200,14 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 30px 0;
+    margin: 30px 0 50px 0;
     color: #FFD700;
     font-size: 1.7rem;
 }
 
 .cupom-body{
     width: 600px;
+    display:flex;
 }
 
 .cupom-body label{
@@ -214,13 +215,26 @@ footer {
 }
 
 .botao-validar-cupom {
-    border-radius: 10px;
-    padding: 15px;
     border-width: 0px;
-    margin: 15px auto 0;
+    margin-left: 15px;
+    border-radius: 10px !important;
 }
 
 
 .form-floating{
     width: 50%
+}
+
+.check-endereco{
+
+}
+
+.container-checkout{
+    width: 50%;
+}
+
+.inputs-endereco{
+    color: black;
+    margin-top: 10px;
+    width: 90% !important;
 }
