--- a/NcDonalds/wwwroot/css/admin.css
+++ b/NcDonalds/wwwroot/css/admin.css
@@ -5,16 +5,21 @@
     --amarelo: #F1B104;
 }
 
-ul {
+ul.quadrado {
     columns: 2;
     width: 500px;
     margin: 0 auto;
 }
 
-a {
+li.quadrado {
+    padding: 22px;
+}
+
+a.text-dark{
     border: 1px solid var(--vermelho);
     padding: 10px;
 }
+
 /* Lanche Index */
 .content-admin {
     width: 80%;
