--- a/NcDonalds/Areas/Admin/Views/Admin/Index.cshtml
+++ b/NcDonalds/Areas/Admin/Views/Admin/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="content">
 
         <section>
-            <img class="img-action" src="~/images/Lanches/food.svg" />
+            <img class="img-action" src="https://ncdonalds.blob.core.windows.net/images-webdesign/images_webdesign-food.svg" />
         </section>
 
         <section>
