--- a/NcDonalds/Areas/Admin/Views/AdminCategoria/Create.cshtml
+++ b/NcDonalds/Areas/Admin/Views/AdminCategoria/Create.cshtml
@@ -13,7 +13,7 @@
     <div class="container-row">
 
         <section class="section-container">
-            <img class="img-action" src="/images/Lanches/food.svg" alt="mulher bebendo suquinho">
+            <img class="img-action" src="https://ncdonalds.blob.core.windows.net/images-webdesign/images_webdesign-food.svg" alt="mulher bebendo suquinho">
         </section>
 
 
