--- a/NcDonalds/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/NcDonalds/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 <ul class="container-row">
                     <li>
                         <a asp-controller="Admin" asp-action="Index">
-                            <img src="/images/Lanches/settings1.svg" class="img-header" style="width: 75px;">
+                            <img src="https://ncdonalds.blob.core.windows.net/images-webdesign/images_webdesign-engrenagem.svg" class="img-header" style="width: 75px;">
                         </a>
 
                     </li>
