--- a/NcDonalds/Views/Home/Index.cshtml
+++ b/NcDonalds/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="container-row">
 
                 <div class="img-home">
-                    <img src="/images/cliente.png" />
+                    <img src="https://ncdonalds.blob.core.windows.net/images-webdesign/images_webdesign-girlaboutus.png" />
                 </div>
 
                 <div class="container-column content-home">
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="img-home">
-                    <img src="/images/cliente.png" />
+                    <img src="https://ncdonalds.blob.core.windows.net/images-webdesign/images_webdesign-girlaboutus.png" />
                 </div>
 
             </div>
